# 99_problems

./: README.md
go/src/: main.go
go/src/data_structures/: array_list.go  common.go  common_test.go  linked_list.go  lists.go  lists_test.go  map.go  map_test.go
go/src/data_structures/binary_tree/: binary_tree.go  binary_tree_test.go
go/src/data_structures/hash_map/: map.go  map_test.go
go/src/data_structures/list/: array_list.go  linked_list.go  lists.go  lists_test.go
go/src/utils/: utils.go  utils_test.go
haskell/: .project  HaskellBook.cabal
haskell/src/: P1.hs  P2.hs  P3.hs  P4.hs  P5.hs  P6.hs  P7.hs  P8.hs
prolog/: p1.pl  p2.pl  p3.pl  p4.pl
