name:           HaskellBook
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         nikolas

executable HaskellBook
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   P1,
                   P2,
                   P3,
                   P4,
                   P5

